# SOL-101-Web

./: .env.example  .gitignore  Anchor.toml  Cargo.toml  LICENSE  README.md  eslint.config.mjs  index.html  package-lock.json  package.json  postcss.config.mjs  vite.config.ts
.github/workflows/: deploy-pages.yml  frontend-ci.yml
docs/: ATTRIBUTIONS.md  CROSS_CLIENT_ARCHITECTURE.md  DEVNET_REALTIME_STRATEGY.md  GAME_INTEGRATION.md  GENEL_DURUM_RAPORU.md  Guidelines.md  NIHAI_VERSIYON.md  P1_TASARIM_NOTLARI.md  REPO_STRUCTURE_TR.md  ROOT_FILES_TR.md  SHARED_METADATA_STRATEGY.md  SMOKE_TEST_TR.md
docs/setup/: GITHUB_PAGES_SETUP.md  SOLANA_SETUP.md  SUPABASE_SETUP.md
functions/server/: index.tsx  kv_store.tsx
migrations/: README_TR.md
programs/: README_TR.md
programs/duan_market/: Cargo.toml
programs/duan_market/src/: lib.rs
programs/duan_shop/: Cargo.toml
programs/duan_shop/src/: lib.rs
public/: README_TR.md
scripts/: README_TR.md  create-duan-mint.ts  export-shop-metadata-snapshot.mjs  set-game-authority.ts  solana-runtime.ts  sync-onchain-idl.mjs  sync-onchain-market-idl.mjs  sync-onchain-shop.ts  validate-project.sh
shared/: README_TR.md  duanEconomy.ts  profileCosmetics.ts  shopCatalog.ts  shopMetadata.schema.json
src/: README_TR.md  global.d.ts  main.tsx
src/app/: App.tsx  Layout.tsx  routes.tsx  store.ts  types.ts
src/app/components/: AdminRoute.tsx  AppShellErrorBoundary.tsx  AuthAwareHomeRedirect.tsx  ContentGridSkeleton.tsx  Footer.tsx  GlassCard.tsx  LanguageToggle.tsx  ModuleStateCard.tsx  Navbar.tsx  NotificationRail.tsx  PageHero.tsx  PageShell.tsx  RarityBadge.tsx  SectionErrorBoundary.tsx  SystemStatusCard.tsx  ThemeToggle.tsx  (+1 more)
src/styles/: fonts.css  tailwind.css  theme.css
supabase/: README_TR.md
supabase/migrations/: 20260323_init_duan_kv.sql  20260323_security_hardening.sql
tests/: README_TR.md  duan-shop.test.mjs  wallet-bridge.test.mjs
(+39 files in other folders)
