[workspace]
# Rust/Anchor workspace koku. On-chain programlar burada bir araya gelir.
members = [
  "programs/duan_shop",
]
resolver = "2"

[profile.release]
# Program binary boyutu ve derleme optimizasyonu icin release ayarlari.
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
